--- a/public/index.html
+++ b/public/index.html
@@ -65,9 +65,9 @@
                     { name: "Blasenschwäche", url: "de/blasenschwaeche.html", img: "akupunktur-blasenschwaeche-zuerich.webp", desc: "Stärkung der Blasenmuskulatur und -kontrolle." }
                 ]},
                 { name: "Orthopädische Erkrankungen", id: "ort", items: [
-                    { name: "Lumbalgie", url: "de/lumbalgie.html", img: "akupunktur-lumbalgie-zuerich.jpg.webp", desc: "Gezielte Hilfe bei Schmerzen im unteren Rücken." },
+                    { name: "Lumbalgie", url: "de/lumbalgie.html", img: "akupunktur-lumbalgie-zuerich.webp", desc: "Gezielte Hilfe bei Schmerzen im unteren Rücken." },
                     { name: "Rückenschmerzen", url: "de/rueckenschmerzen.html", img: "akupunktur-rueckenschmerzen-zuerich.webp", desc: "Behandlung von Verspannungen und Wirbelsäulenproblemen." },
-                    { name: "Ischiasbeschwerden", url: "de/ischiasbeschwerden.html", img: "akupunktur-ischiasbeschwerden-zuerich.webp", desc: "Linderung von Nervenschmerzen und Ausstrahlungen." },
+                    { name: "Ischiasbeschwerden", url: "de/ischiasbeschwerden.html", img: "akupunktur-ischiasbeschwerden-zuerich.webp", desc: "Linderung von Nervenschmerzen and Ausstrahlungen." },
                     { name: "Nacken-Schulter-Arm", url: "de/nacken-schulter-arm-syndrom.html", img: "akupunktur-nacken-schulter-arm-syndrom-zuerich.webp", desc: "Hilfe bei Steifheit und Schmerzen im Oberkörper." },
                     { name: "Tennis-Arm", url: "de/tennis-arm.html", img: "akupunktur-tennisarm-zuerich.webp", desc: "Therapie bei Epicondylitis und Sehnenreizungen." },
                     { name: "Arthritis / Arthrose", url: "de/arthritis.html", img: "akupunktur-arthritis-zuerich.webp", desc: "Behandlung von Gelenkentzündungen und Verschleiß." },
@@ -109,41 +109,41 @@
             title: "TCM specialities for the following conditions:",
             categories: [
                 { name: "Neurological conditions", id: "neu", items: [
-                    { name: "Migraine", url: "en/migraine.html", img: "migraene.webp", desc: "Effective acupuncture for chronic migraines." },
-                    { name: "Headaches", url: "en/headaches.html", img: "kopfschmerzen.webp", desc: "Holistic relief for tension headaches." },
-                    { name: "Dizziness", url: "en/dizziness.html", img: "schwindel.webp", desc: "TCM therapy for balance disorders." },
-                    { name: "Tinnitus", url: "en/tinnitus.html", img: "tinnitus.webp", desc: "Natural approaches to reducing ear ringing." },
-                    { name: "Trigeminal neuralgia", url: "en/trigeminal-neuralgia.html", img: "trigeminusneuralgie.webp", desc: "Pain therapy for facial nerve pain." },
-                    { name: "Post-stroke paralysis", url: "en/post-stroke-paralysis.html", img: "schlaganfall-laehmung.webp", desc: "Supporting motor skill recovery." }
+                    { name: "Migraine", url: "en/migraine.html", img: "akupunktur-migraene-zuerich.webp", desc: "Effective acupuncture for chronic migraines." },
+                    { name: "Headaches", url: "en/headaches.html", img: "akupunktur-kopfschmerzen-zuerich.webp", desc: "Holistic relief for tension headaches." },
+                    { name: "Dizziness", url: "en/dizziness.html", img: "akupunktur-schwindel-zuerich.webp", desc: "TCM therapy for balance disorders." },
+                    { name: "Tinnitus", url: "en/tinnitus.html", img: "akupunktur-tinnitus-zuerich.webp", desc: "Natural approaches to reducing ear ringing." },
+                    { name: "Trigeminal neuralgia", url: "en/trigeminal-neuralgia.html", img: "akupunktur-trigeminusneuralgie-zuerich.webp", desc: "Pain therapy for facial nerve pain." },
+                    { name: "Post-stroke paralysis", url: "en/post-stroke-paralysis.html", img: "akupunktur-schlaganfall-zuerich.webp", desc: "Supporting motor skill recovery." }
                 ]},
                 { name: "Orthopaedic conditions", id: "ort", items: [
-                    { name: "Low back pain", url: "en/low-back-pain.html", img: "lumbalgie.webp", desc: "Targeted relief for lower back issues." },
-                    { name: "Back pain", url: "en/back-pain.html", img: "rueckenschmerzen.webp", desc: "Treating spinal tension and discomfort." },
-                    { name: "Sciatica", url: "en/sciatica.html", img: "ischiasbeschwerden.webp", desc: "Relieving nerve pain and radiating symptoms." },
-                    { name: "Arthritis / Rheumatic", url: "en/arthritis.html", img: "arthritis.webp", desc: "Natural joint and inflammation therapy." }
+                    { name: "Low back pain", url: "en/low-back-pain.html", img: "akupunktur-lumbalgie-zuerich.webp", desc: "Targeted relief for lower back issues." },
+                    { name: "Back pain", url: "en/back-pain.html", img: "akupunktur-rueckenschmerzen-zuerich.webp", desc: "Treating spinal tension and discomfort." },
+                    { name: "Sciatica", url: "en/sciatica.html", img: "akupunktur-ischiasbeschwerden-zuerich.webp", desc: "Relieving nerve pain and radiating symptoms." },
+                    { name: "Arthritis / Rheumatic", url: "en/arthritis.html", img: "akupunktur-arthritis-zuerich.webp", desc: "Natural joint and inflammation therapy." }
                 ]},
                 { name: "Internal medicine", id: "inn", items: [
-                    { name: "Bronchitis / Asthma", url: "en/bronchitis.html", img: "bronchitis.webp", desc: "Strengthening respiratory functions." },
-                    { name: "Hypertension", url: "en/hypertension.html", img: "bluthochdruck.webp", desc: "Supporting blood pressure regulation." },
-                    { name: "Digestive disorders", url: "en/digestive-disorders.html", img: "magen.webp", desc: "Help for bloating, nausea and IBS." }
+                    { name: "Bronchitis / Asthma", url: "en/bronchitis.html", img: "akupunktur-asthma-zuerich.webp", desc: "Strengthening respiratory functions." },
+                    { name: "Hypertension", url: "en/hypertension.html", img: "akupunktur-bluthochdruck-zuerich.webp", desc: "Supporting blood pressure regulation." },
+                    { name: "Digestive disorders", url: "en/digestive-disorders.html", img: "akupunktur-verdauungsleiden-zuerich.webp", desc: "Help for bloating, nausea and IBS." }
                 ]},
                 { name: "Gynaecological conditions", id: "gyn", items: [
-                    { name: "Infertility", url: "en/infertility.html", img: "unfruchtbarkeit.webp", desc: "Natural support for fertility journeys." },
-                    { name: "Menstrual discomfort", url: "en/menstrual-discomfort.html", img: "menstruation.webp", desc: "Relief for cycle-related pain." },
-                    { name: "Menopausal symptoms", url: "en/menopausal-symptoms.html", img: "wechseljahre.webp", desc: "Easing hot flashes and hormonal shifts." }
+                    { name: "Infertility", url: "en/infertility.html", img: "akupunktur-unfruchtbarkeit-zuerich.webp", desc: "Natural support for fertility journeys." },
+                    { name: "Menstrual discomfort", url: "en/menstrual-discomfort.html", img: "akupunktur-menstruationsbeschwerden-zuerich.webp", desc: "Relief for cycle-related pain." },
+                    { name: "Menopausal symptoms", url: "en/menopausal-symptoms.html", img: "akupunktur-wechseljahresbeschwerden-zuerich.webp", desc: "Easing hot flashes and hormonal shifts." }
                 ]},
                 { name: "Mental health", id: "psy", items: [
-                    { name: "Depression", url: "en/depression.html", img: "depression.webp", desc: "Emotional balancing and mood support." },
-                    { name: "Sleep disorders", url: "en/sleep-disorders.html", img: "schlafstoerung.webp", desc: "Improving sleep quality with acupuncture." },
-                    { name: "Burnout", url: "en/burnout.html", img: "burnout.webp", desc: "Recovery from deep exhaustion." }
+                    { name: "Depression", url: "en/depression.html", img: "akupunktur-depression-zuerich.webp", desc: "Emotional balancing and mood support." },
+                    { name: "Sleep disorders", url: "en/sleep-disorders.html", img: "akupunktur-schlafstoerung-zuerich.webp", desc: "Improving sleep quality with acupuncture." },
+                    { name: "Burnout", url: "en/burnout.html", img: "akupunktur-burnout-zuerich.webp", desc: "Recovery from deep exhaustion." }
                 ]},
                 { name: "Allergy & Skin", id: "haut", items: [
-                    { name: "Hay fever", url: "en/hay-fever.html", img: "heuschnupfen.webp", desc: "Symptom relief for pollen allergies." },
-                    { name: "Eczema / Acne", url: "en/eczema.html", img: "haut.webp", desc: "Holistic skin healing and balancing." }
+                    { name: "Hay fever", url: "en/hay-fever.html", img: "akupunktur-heuschnupfen-zuerich.webp", desc: "Symptom relief for pollen allergies." },
+                    { name: "Eczema / Acne", url: "en/eczema.html", img: "akupunktur-ekzem-zuerich.webp", desc: "Holistic skin healing and balancing." }
                 ]},
                 { name: "Other", id: "sonst", items: [
-                    { name: "Smoking cessation", url: "en/smoking-cessation.html", img: "rauchen.webp", desc: "Supportive care for quitting smoking." },
-                    { name: "Overweight", url: "en/overweight.html", img: "gewicht.webp", desc: "Metabolism activation for weight loss." }
+                    { name: "Smoking cessation", url: "en/smoking-cessation.html", img: "akupunktur-nikotinentwöhnung-zuerich.webp", desc: "Supportive care for quitting smoking." },
+                    { name: "Overweight", url: "en/overweight.html", img: "akupunktur-uebergewicht-zuerich.webp", desc: "Metabolism activation for weight loss." }
                 ]}
             ]
         }
