--- a/public/de/migraene.html
+++ b/public/de/migraene.html
@@ -2,25 +2,67 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Behandlung</title>
+    <title>Migräne Behandlung mit TCM | TAI TCM Zürich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.6; max-width: 900px; margin: 0 auto; padding: 20px; color: #333; }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        .hero-img { width: 100%; height: auto; border-radius: 4px; margin-bottom: 30px; }
+        h1 { color: var(--tcm-dark); font-size: 2em; text-transform: uppercase; border-bottom: 2px solid var(--tcm-teal); padding-bottom: 10px; }
+        h2 { color: var(--tcm-dark); margin-top: 30px; font-size: 1.5em; }
+        ul { padding-left: 20px; }
+        li { margin-bottom: 10px; }
+        .cta-box { margin-top: 50px; padding: 30px; background: #f8fbfb; border-radius: 8px; text-align: center; border: 1px solid #eee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold; font-size: 1.1em; transition: 0.3s; }
+        .btn-booking:hover { background: var(--tcm-dark); }
+        .footer-links { margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee; font-size: 0.9em; }
+        .footer-links a { color: var(--tcm-dark); text-decoration: none; margin-right: 15px; }
     </style>
 </head>
 <body>
+
     <a href="../index.html" class="back-link">← Zurück zur Übersicht</a>
-    <h1>BEHANDLUNG VON MIGRAENE MIT TCM</h1>
-    <p>1. Wie versteht die TCM Migräne?
-Migräne wird in der TCM als eine Störung des Energieflusses betrachtet, oft durch aufsteigendes Leber-Yang, Blutstagnation oder äußere Einflüsse verursacht. Emotionen, Ernährung und Konstitution spielen eine große Rolle.
-2. Hilft Akupunktur bei Migräne?
-Ja. Zahlreiche Studien zeigen, dass Akupunktur die Häufigkeit und Intensität von Migräneanfällen deutlich reduzieren kann – ideal für Patient:innen, die Schmerzmittel nicht vertragen oder vermeiden wollen.
-3. Wie lange muss ich behandelt werden?
-Migräne ist eine chronische Erkrankung. In der Regel empfehlen wir 1–2 Sitzungen pro Woche über 4–6 Wochen. Viele spüren bereits nach 3–4 Behandlungen eine spürbare Besserung.
-4. Was bietet die TCM noch an?
-Neben Akupunktur helfen auch Tuina-Massage, Ohrakupunktur, chinesische Kräuter, emotionale Balance und Lebensstilberatung. Ziel ist nicht nur Symptomlinderung, sondern auch Stabilisierung des ganzen Systems.
-5. Kann ich TCM mit Schulmedizin kombinieren?
-Ja. Die TCM ist eine gute Ergänzung zur westlichen Medizin. Eine kombinierte Behandlung ist in den meisten Fällen sicher und sinnvoll – bitte sprechen Sie uns an.</p>
+
+    <img src="../img/akupunktur-migraene-zuerich.webp" alt="Akupunktur Behandlung bei Migräne in Zürich" class="hero-img">
+
+    <h1>MIGRÄNE-BEHANDLUNG MIT TCM – NATÜRLICHE HILFE BEI DER URSACHE</h1>
+
+    <h2>1. WIE VERSTEHT DIE TCM MIGRÄNE?</h2>
+    <p>In der Traditionellen Chinesischen Medizin ist Migräne mehr als nur ein Symptom – sie ist ein Zeichen für ein inneres Ungleichgewicht. Häufige Ursachen sind laut TCM:</p>
+    <ul>
+        <li><strong>Leber-Qi-Stagnation:</strong> Oft ausgelöst durch Stress oder emotionale Belastung.</li>
+        <li><strong>Blutmangel:</strong> Wenn das Gehirn nicht ausreichend genährt wird.</li>
+        <li><strong>Wind-Kälte-Attacken:</strong> Äußere Einflüsse, die die Meridiane blockieren.</li>
+        <li><strong>Feuchtigkeit oder Schleim:</strong> Blockiert den freien Fluss der Energie im Kopf.</li>
+    </ul>
+
+    <h2>2. WELCHE ARTEN VON KOPFSCHMERZEN WERDEN BEHANDELT?</h2>
+    <p>Die TCM bietet wirksame Ansätze für verschiedene Formen von Kopfschmerzen:</p>
+    <ul>
+        <li><strong>Spannungskopfschmerzen:</strong> Beidseitig, dumpf und oft stressbedingt.</li>
+        <li><strong>Klassische Migräne:</strong> Pochen, einseitig, oft begleitet von Übelkeit oder Hormonschwankungen.</li>
+        <li><strong>Wetterfühlige Beschwerden:</strong> Schmerzen, die bei Wetterumschwung auftreten.</li>
+    </ul>
+
+    <h2>3. WIE LÄUFT DIE BEHANDLUNG AB?</h2>
+    <p>Nach einer ausführlichen Diagnose (Zungen- und Pulsdiagnose) umfasst die Therapie individuell abgestimmte Methoden:</p>
+    <ul>
+        <li><strong>Akupunktur:</strong> Um den Energiefluss (Qi) zu regulieren und Schmerzen zu lindern.</li>
+        <li><strong>Tuina-Massage:</strong> Zur Lösung von Verspannungen im Nacken- und Schulterbereich.</li>
+        <li><strong>Heilkräuter:</strong> Um das Blut zu nähren und die Organfunktion zu stärken.</li>
+    </ul>
+
+    <div class="cta-box">
+        <h3>Möchten Sie Ihre Migräne nachhaltig behandeln?</h3>
+        <p>Vereinbaren Sie jetzt online einen Termin für eine Erstkonsultation in unserer Praxis in Zürich.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">JETZT TERMIN ONLINE BUCHEN</a>
+    </div>
+
+    <div class="footer-links">
+        <p>Besuchen Sie unsere Website: <a href="https://taitcm.ch" target="_blank">www.taitcm.ch</a></p>
+        <p>Stichwörter: Migräne, Kopfschmerzen, Akupunktur, TCM Zürich, Stress, Natürliche Schmerztherapie</p>
+    </div>
+
 </body>
 </html>
