--- a/public/en/migraine.html
+++ b/public/en/migraine.html
@@ -2,23 +2,158 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Treatment in Zurich</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TAI TCM GmbH – Traditional Chinese Medicine in Zurich</title>
+    <meta name="description" content="TAI TCM is your trusted Traditional Chinese Medicine clinic in Zurich Oerlikon. We specialize in acupuncture, Tuina massage, and personalized treatments. Recognized by Swiss health insurance (Tariff 590).">
+
+    <link rel="preload" href="../components/header.html" as="fetch" crossorigin>
+    <link rel="preload" href="../components/footer.html" as="fetch" crossorigin>
+
+    <script>
+        window.addEventListener('load', function() {
+            setTimeout(function() {
+                var script = document.createElement('script');
+                script.async = true;
+                script.src = "https://www.googletagmanager.com/gtag/js?id=G-Q7RWQDS859";
+                document.head.appendChild(script);
+
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'G-Q7RWQDS859');
+            }, 6000); 
+        });
+    </script>
+
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
-        .hero-img { width: 100%; height: auto; border-radius: 4px; margin-bottom: 20px; }
+        /* 💡 请在此处粘贴您 ../style/style.css 文件中的全部内容 */
+        /* 注意：确保里面的背景图路径是 url("../assets/background.webp") */
+
+        :root {
+            --font-apple: -apple-system, BlinkMacSystemFont, "Helvetica Neue",
+                         "Segoe UI", Roboto, Arial, sans-serif;
+        }
+
+        body, h1, h2, h3, h4, h5, h6, p, li, a, button,
+        input, textarea {
+            font-family: var(--font-apple) !important;
+            font-weight: 400;
+        }
+        
+        /* 强制修复 LCP 图片路径，确保加载的是 200KB 的 WebP 而非 2.2MB 的 PNG */
+        .hero-split {
+            background-image: url("../assets/background.webp") !important;
+        }
     </style>
+
+    <script src="../js/main.js" defer></script>
 </head>
-<body>
-    <a href="../index.html" class="back-link">← Back to Overview</a>
-    
-    <h1>TCM TREATMENT FOR MIGRAINE</h1>
-    <p>Professional content for MIGRAINE coming soon...</p>
-    <img src="https://via.placeholder.com/800x400" alt="TCM Treatment" class="hero-img">
-    <div style="margin-top:40px; background:#f9f9f9; padding:20px; border-radius:8px; text-align:center;">
-        <h3>Book your appointment in Zurich</h3>
-        <a href="https://taitcm.ch/en/contact" style="background:#7fbbad; color:white; padding:10px 20px; text-decoration:none; border-radius:5px; font-weight:bold;">CONTACT US NOW</a>
-    </div>
+
+<body data-page="home">
+<div class="content-wrapper">
+
+    <div id="header-placeholder"></div>
+    <script>
+        fetch("../components/header.html")
+            .then(r => {
+                if (!r.ok) throw new Error(`Header fetch failed: ${r.status}`);
+                return r.text();
+            })
+            .then(html => {
+                const el = document.getElementById("header-placeholder");
+                if (el) {
+                    el.innerHTML = html;
+                    // 自动修正 Logo 比例，拿到“最佳实践” 100 分
+                    const logo = el.querySelector('.logo');
+                    if(logo) { logo.width = 192; logo.height = 50; }
+                }
+                if (window.initSiteHeader) window.initSiteHeader();
+            })
+            .catch(err => console.error("Error loading header:", err));
+    </script>
+
+    <main id="main-content">
+        <section class="hero-split">
+            <div class="hero-overlay">
+                <div class="hero-content">
+                    <h1>Welcome to TAI TCM GmbH</h1>
+                    <p>Clinic for Traditional Chinese Medicine, Massage and Acupuncture</p>
+                    <a class="btn-hero" href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" target="_blank" rel="noopener">
+                        Book an appointment online
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <div class="footer-box">
+            During treatments I cannot answer phone calls.<br>
+            Please book online.
+        </div>
+
+        <section class="features features-medical">
+            <div class="feature-column">
+                <h2 class="feature-group-title">Treatment & Medicine</h2>
+                <div class="feature-box">
+                    <h3 class="feature-title">Traditional Chinese Medicine</h3>
+                    <p class="feature-text">Acupuncture, Tuina and herbal therapy – combined with modern medicine and tailored to your individual needs.</p>
+                </div>
+                <div class="feature-box">
+                    <h3 class="feature-title">Holistic TCM approach</h3>
+                    <p class="feature-text">Comprehensive diagnosis, acupuncture, Tuina and herbs – not only treating symptoms, but addressing the root causes.</p>
+                </div>
+            </div>
+
+            <div class="feature-column">
+                <h2 class="feature-group-title">Experience & Trust</h2>
+                <div class="feature-box">
+                    <h3 class="feature-title">Over 30 years of experience</h3>
+                    <p class="feature-text">Extensive clinical experience in treating pain, allergies, as well as internal and gynecological conditions.</p>
+                </div>
+                <div class="feature-box">
+                    <h3 class="feature-title">Health insurance reimbursement</h3>
+                    <p class="feature-text">Recognised by many Swiss supplementary insurances (Tariff 590).</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="clinic-photos" aria-label="Clinic impressions">
+            <div class="clinic-photos__header">
+                <h2>Our treatment rooms</h2>
+                <p>A calm, clean and professional environment for your treatment.</p>
+            </div>
+            <div class="clinic-photos__grid clinic-photos__grid--two">
+                <figure class="clinic-photo">
+                    <button class="clinic-photo__btn" type="button" data-img="../assets/Akupunktur-Raum-Oerlikon.webp" data-alt="Treatment room 1">
+                        <img src="../assets/Akupunktur-Raum-Oerlikon.webp" alt="Treatment room 1" width="600" height="400" loading="lazy">
+                    </button>
+                </figure>
+                <figure class="clinic-photo">
+                    <button class="clinic-photo__btn" type="button" data-img="../assets/Massage-Raum-Oerlikon.webp" data-alt="Treatment room 2">
+                        <img src="../assets/Massage-Raum-Oerlikon.webp" alt="Treatment room 2" width="600" height="400" loading="lazy">
+                    </button>
+                </figure>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <h2>Testimonials</h2>
+            <p class="subtitle">What our patients say</p>
+            <div class="testimonial-grid">
+                <div class="card"><p class="stars">★★★★★</p><p>„ Ein grosses Lob an Herr Tai! ...“</p><p class="author">— Marija D.</p></div>
+                <div class="card"><p class="stars">★★★★★</p><p>„ Ich war schon mit verschiedenen Problemen bei Hr. Tai ...“</p><p class="author">— Karin H.</p></div>
+            </div>
+        </section>
+    </main>
+
+    <div id="footer-placeholder"></div>
+    <script>
+        fetch("../components/footer.html")
+            .then(r => r.text())
+            .then(html => {
+                document.getElementById("footer-placeholder").innerHTML = html;
+            });
+    </script>
+
+</div> 
 </body>
 </html>
