--- a/public/en/headaches.html
+++ b/public/en/headaches.html
@@ -2,22 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Treatment in Zurich</title>
+    <title>Treating Headaches with TCM | TAI TCM Zurich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
-        .hero-img { width: 100%; height: auto; border-radius: 4px; margin-bottom: 20px; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0 0 10px 0; }
+        .highlight-box ul { margin: 10px 0 0 20px; padding: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Overview</a>
-    <img src="https://via.placeholder.com/800x400" alt="TCM Treatment" class="hero-img">
-    <h1>TCM TREATMENT FOR HEADACHES</h1>
-    <p>Professional content for HEADACHES coming soon...</p>
-    <div style="margin-top:40px; background:#f9f9f9; padding:20px; border-radius:8px; text-align:center;">
-        <h3>Book your appointment in Zurich</h3>
-        <a href="https://taitcm.ch/en/contact" style="background:#7fbbad; color:white; padding:10px 20px; text-decoration:none; border-radius:5px; font-weight:bold;">CONTACT US NOW</a>
+    <a href="../index.html" class="back-link">← Back to Blog Overview</a>
+    <img src="../img/akupunktur-kopfschmerzen-zuerich.webp" alt="TCM Headache Treatment Zurich" class="hero-img">
+
+    <h1>Holistic Relief for Headaches – The TCM Approach</h1>
+
+    <h2>1. How does TCM view headaches?</h2>
+    <div class="highlight-box">
+        <p>In Traditional Chinese Medicine, headaches are not seen merely as symptoms, but as expressions of internal imbalance. Common causes include:</p>
+        <ul>
+            <li>Liver Qi Stagnation (often stress-related)</li>
+            <li>Blood Deficiency</li>
+            <li>Wind-Cold Invasion</li>
+            <li>Dampness or Phlegm in the head area</li>
+        </ul>
+        <p style="margin-top:10px;">The location and quality of the pain provide vital clues to the underlying disharmony.</p>
+    </div>
+
+    <h2>2. Which types of headaches does TCM treat?</h2>
+    <div class="highlight-box">
+        <p>TCM can alleviate many types of headaches, including:</p>
+        <ul>
+            <li><strong>Tension Headaches:</strong> Usually bilateral, dull, and triggered by stress.</li>
+            <li><strong>Migraines:</strong> Unilateral, throbbing, and often related to hormonal changes.</li>
+            <li><strong>Weather-sensitive or cyclic headaches:</strong> Such as those occurring before menstruation or during weather shifts.</li>
+        </ul>
+    </div>
+
+    <h2>3. How is the treatment carried out?</h2>
+    <div class="highlight-box">
+        <p>Following a detailed diagnosis (tongue, pulse, and history), an individual therapy plan is created. This includes:</p>
+        <ul>
+            <li><strong>Acupuncture:</strong> Clears blockages and promotes the free flow of Qi.</li>
+            <li><strong>Tuina Massage:</strong> Especially effective for muscle tension in the neck and shoulder area.</li>
+            <li><strong>Chinese Herbs:</strong> For nourishing blood or specifically regulating Qi.</li>
+        </ul>
+    </div>
+
+    <h2>4. How quickly does TCM work for headaches?</h2>
+    <div class="highlight-box">
+        <p>For acute tension headaches, even a single treatment can bring noticeable relief. For chronic migraines, regular therapy over several weeks or months is advisable. Our goal is long-term stabilization of your system, not just short-term symptom suppression.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Find Relief from Headaches</h3>
+        <p>Book your appointment online now for a personal consultation in Zurich.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Book Appointment Online</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>More information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM – Your experts for pain therapy in Zurich</p>
     </div>
 </body>
 </html>
