--- a/public/en/dizziness.html
+++ b/public/en/dizziness.html
@@ -2,22 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Treatment in Zurich</title>
+    <title>TCM Treatment for Dizziness in Zurich | TAI TCM Blog</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
-        .hero-img { width: 100%; height: auto; border-radius: 4px; margin-bottom: 20px; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Overview</a>
-    <img src="https://via.placeholder.com/800x400" alt="TCM Treatment" class="hero-img">
-    <h1>TCM TREATMENT FOR DIZZINESS</h1>
-    <p>Professional content for DIZZINESS coming soon...</p>
-    <div style="margin-top:40px; background:#f9f9f9; padding:20px; border-radius:8px; text-align:center;">
-        <h3>Book your appointment in Zurich</h3>
-        <a href="https://taitcm.ch/en/contact" style="background:#7fbbad; color:white; padding:10px 20px; text-decoration:none; border-radius:5px; font-weight:bold;">CONTACT US NOW</a>
+    <a href="../index.html" class="back-link">← Back to Blog Overview</a>
+    <img src="../img/akupunktur-schwindel-zuerich.webp" alt="TCM Dizziness Treatment Zurich" class="hero-img">
+
+    <h1>Natural Treatment for Dizziness – Restoring Your Balance</h1>
+
+    <h2>1. How does TCM understand dizziness?</h2>
+    <div class="highlight-box">
+        <p>In TCM, dizziness is often an expression of internal imbalance – e.g., caused by rising liver wind, phlegm blockages, or blood and Qi deficiency. Stressed, exhausted, or elderly people are frequently affected.</p>
+    </div>
+
+    <h2>2. Does acupuncture help with dizziness?</h2>
+    <div class="highlight-box">
+        <p>Yes. Acupuncture has a balancing effect on the vegetative nervous system, clears the head, and improves balance. It is particularly helpful for Meniere's disease or cervicogenic dizziness.</p>
+    </div>
+
+    <h2>3. Is a combination with herbs useful?</h2>
+    <div class="highlight-box">
+        <p>For recurring symptoms, complementary herbal therapy is recommended – to strengthen the kidneys, resolve phlegm, and calm the "internal wind."</p>
+    </div>
+
+    <h2>4. How long does the therapy take?</h2>
+    <div class="highlight-box">
+        <p>Generally, we recommend 1–2 sessions per week over 4–6 weeks as a standard therapy cycle. Early treatment usually brings faster noticeable results.</p>
+    </div>
+
+    <h2>5. Is TCM suitable for elderly patients?</h2>
+    <div class="highlight-box">
+        <p>Absolutely. The treatment is gentle, individually adaptable, and has few side effects – ideal for age-related or circulation-dependent dizziness.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Regain Your Balance</h3>
+        <p>Book your appointment conveniently online via our Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Book Appointment Online</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>For more information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>Expertise in Traditional Chinese Medicine | Zurich</p>
     </div>
 </body>
 </html>
