--- a/public/de/tinnitus.html
+++ b/public/de/tinnitus.html
@@ -2,16 +2,64 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Behandlung</title>
+    <title>Tinnitus-Behandlung mit TCM | TAI TCM Zürich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Zurück zur Übersicht</a>
-    <h1>BEHANDLUNG VON TINNITUS MIT TCM</h1>
-    <p>Hier den Text einfügen...</p>
+    <a href="../index.html" class="back-link">← Zurück zum Blog-Überblick</a>
+    <img src="../img/akupunktur-tinnitus-zuerich.webp" alt="TCM Tinnitus Behandlung Zürich" class="hero-img">
+
+    <h1>Tinnitus natürlich behandeln – Wege zur Ruhe</h1>
+
+    <h2>1. Wie sieht die TCM Tinnitus?</h2>
+    <div class="highlight-box">
+        <p>Tinnitus entsteht laut TCM häufig durch ein Ungleichgewicht in Niere und Leber – z. B. Nieren-Yin-Mangel, aufsteigendes Leberfeuer oder Schleimblockaden. Auch Stress, Überlastung und Reizüberflutung gelten als Auslöser.</p>
+    </div>
+
+    <h2>2. Hilft Akupunktur bei Ohrgeräuschen?</h2>
+    <div class="highlight-box">
+        <p>Ja. Akupunktur kann die Durchblutung im Ohr verbessern, das Nervensystem beruhigen und die inneren Leitbahnen harmonisieren. Besonders hilfreich bei akutem oder stressbedingtem Tinnitus.</p>
+    </div>
+
+    <h2>3. Sind Kräuter notwendig?</h2>
+    <div class="highlight-box">
+        <p>Bei chronischem oder konstitutionell bedingtem Tinnitus unterstützen individuell abgestimmte Kräuter die Behandlung – z. B. durch Nierenstärkung oder Hitzereduktion.</p>
+    </div>
+
+    <h2>4. Ist eine frühe Behandlung wichtig?</h2>
+    <div class="highlight-box">
+        <p>Unbedingt. Je früher die Therapie beginnt, desto größer die Erfolgsaussichten. Chronische Verläufe benötigen mehr Geduld.</p>
+    </div>
+
+    <h2>5. Hat TCM Nebenwirkungen?</h2>
+    <div class="highlight-box">
+        <p>Die Verfahren sind sanft, gut verträglich und individuell anpassbar. Ideal für Patient:innen, die eine natürliche Alternative suchen oder Medikamente nicht vertragen.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Linderung für Ihre Ohrgeräusche</h3>
+        <p>Buchen Sie Ihren Termin bequem online über unseren Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Termin online vereinbaren</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>Weitere Informationen finden Sie auf: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>Expertise in Traditioneller Chinesischer Medizin | Zürich</p>
+    </div>
 </body>
 </html>
