--- a/public/de/trigeminusneuralgie.html
+++ b/public/de/trigeminusneuralgie.html
@@ -2,16 +2,64 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Behandlung</title>
+    <title>Trigeminusneuralgie-Behandlung mit TCM | TAI TCM Zürich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Zurück zur Übersicht</a>
-    <h1>BEHANDLUNG VON TRIGEMINUSNEURALGIE MIT TCM</h1>
-    <p>Hier den Text einfügen...</p>
+    <a href="../index.html" class="back-link">← Zurück zum Blog-Überblick</a>
+    <img src="../img/akupunktur-trigeminusneuralgie-zuerich.webp" alt="TCM Trigeminusneuralgie Behandlung Zürich" class="hero-img">
+
+    <h1>Trigeminusneuralgie natürlich behandeln – Hilfe bei Gesichtsschmerzen</h1>
+
+    <h2>1. Was ist eine Trigeminusneuralgie?</h2>
+    <div class="highlight-box">
+        <p>Es handelt sich um eine Erkrankung des Gesichtsnervs mit blitzartig einschießenden, sehr starken Schmerzen – meist einseitig. Die TCM sieht die Ursache in blockierten Leitbahnen durch Wind, Hitze oder Blutstagnation.</p>
+    </div>
+
+    <h2>2. Hilft Akupunktur bei Gesichtsschmerzen?</h2>
+    <div class="highlight-box">
+        <p>Ja. Akupunktur kann die Nervenaktivität regulieren, die Durchblutung verbessern und die Häufigkeit sowie Intensität der Schmerzattacken reduzieren. Viele spüren rasch Linderung.</p>
+    </div>
+
+    <h2>3. Sind Kräuter sinnvoll?</h2>
+    <div class="highlight-box">
+        <p>Bei chronischem Verlauf oder konstitutioneller Schwäche unterstützen Kräuter die Therapie – z. B. zur Förderung der Durchblutung oder zum Ausgleich von Kälte und innerer Leere.</p>
+    </div>
+
+    <h2>4. Ist TCM eine Alternative zur Schulmedizin?</h2>
+    <div class="highlight-box">
+        <p>Gerade wenn Medikamente nicht vertragen werden oder unerwünschte Nebenwirkungen auftreten, ist die TCM eine gut verträgliche, natürliche Option – auch ergänzend zur konventionellen Therapie.</p>
+    </div>
+
+    <h2>5. Wie lange dauert die Behandlung?</h2>
+    <div class="highlight-box">
+        <p>In akuten Phasen empfehlen wir 2–3 Behandlungen pro Woche, später 1× wöchentlich zur Stabilisierung. Eine Basistherapie dauert meist 4–8 Wochen – bei chronischen Verläufen länger.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Linderung Ihrer Gesichtsschmerzen</h3>
+        <p>Vereinbaren Sie jetzt Ihren Termin online über unseren Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Termin online vereinbaren</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>Weitere Informationen finden Sie auf: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>Expertise in Traditioneller Chinesischer Medizin | Zürich</p>
+    </div>
 </body>
 </html>
