--- a/public/index.html
+++ b/public/index.html
@@ -114,36 +114,48 @@
                     { name: "Dizziness", url: "en/dizziness.html", img: "akupunktur-schwindel-zuerich.webp", desc: "TCM therapy for balance disorders." },
                     { name: "Tinnitus", url: "en/tinnitus.html", img: "akupunktur-tinnitus-zuerich.webp", desc: "Natural approaches to reducing ear ringing." },
                     { name: "Trigeminal neuralgia", url: "en/trigeminal-neuralgia.html", img: "akupunktur-trigeminusneuralgie-zuerich.webp", desc: "Pain therapy for facial nerve pain." },
-                    { name: "Post-stroke paralysis", url: "en/post-stroke-paralysis.html", img: "akupunktur-schlaganfall-zuerich.webp", desc: "Supporting motor skill recovery." }
+                    { name: "Post-stroke paralysis", url: "en/post-stroke-paralysis.html", img: "akupunktur-schlaganfall-zuerich.webp", desc: "Supporting motor skill recovery." },
+                    { name: "Bladder emptying disorder", url: "en/bladder-emptying-disorder.html", img: "akupunktur-blasenentleerungsstoerung-zuerich.webp", desc: "TCM regulation of bladder function." },
+                    { name: "Bladder weakness", url: "en/bladder-weakness.html", img: "akupunktur-blasenschwaeche-zuerich.webp", desc: "Strengthening bladder muscles and control." }
                 ]},
                 { name: "Orthopaedic conditions", id: "ort", items: [
-                    { name: "Low back pain", url: "en/low-back-pain.html", img: "akupunktur-lumbalgie-zuerich.webp", desc: "Targeted relief for lower back issues." },
+                    { name: "Lumbago", url: "en/lumbago.html", img: "akupunktur-lumbalgie-zuerich.webp", desc: "Targeted help for lower back pain." },
                     { name: "Back pain", url: "en/back-pain.html", img: "akupunktur-rueckenschmerzen-zuerich.webp", desc: "Treating spinal tension and discomfort." },
                     { name: "Sciatica", url: "en/sciatica.html", img: "akupunktur-ischiasbeschwerden-zuerich.webp", desc: "Relieving nerve pain and radiating symptoms." },
-                    { name: "Arthritis / Rheumatic", url: "en/arthritis.html", img: "akupunktur-arthritis-zuerich.webp", desc: "Natural joint and inflammation therapy." }
+                    { name: "Neck-Shoulder-Arm", url: "en/neck-shoulder-arm.html", img: "akupunktur-nacken-schulter-arm-syndrom-zuerich.webp", desc: "Help for stiffness and pain in the upper body." },
+                    { name: "Tennis elbow", url: "en/tennis-elbow.html", img: "akupunktur-tennisarm-zuerich.webp", desc: "Therapy for epicondylitis and tendon irritation." },
+                    { name: "Arthritis / Osteoarthritis", url: "en/arthritis.html", img: "akupunktur-arthritis-zuerich.webp", desc: "Natural joint and inflammation therapy." },
+                    { name: "Rheumatism", url: "en/rheumatism.html", img: "akupunktur-rheuma-zuerich.webp", desc: "Holistic support for rheumatic diseases." },
+                    { name: "Achilles tendon symptoms", url: "en/achilles-tendon.html", img: "akupunktur-achillessehnen-symptome-zuerich.webp", desc: "Promoting healing for tendon complaints." },
+                    { name: "Heel pain", url: "en/heel-pain.html", img: "akupunktur-fersenschmerz-zuerich.webp", desc: "Help for heel spurs and stress pain." }
                 ]},
                 { name: "Internal medicine", id: "inn", items: [
                     { name: "Bronchitis / Asthma", url: "en/bronchitis.html", img: "akupunktur-asthma-zuerich.webp", desc: "Strengthening respiratory functions." },
+                    { name: "Urinary tract infections", url: "en/urinary-tract-infection.html", img: "akupunktur-harnwegsinfekte-zuerich.webp", desc: "Natural treatment for bladder infections." },
+                    { name: "Arrhythmia", url: "en/arrhythmia.html", img: "akupunktur-herzrhythmusstoerungen-zuerich.webp", desc: "Harmonizing Heart Qi and calming the spirit." },
                     { name: "Hypertension", url: "en/hypertension.html", img: "akupunktur-bluthochdruck-zuerich.webp", desc: "Supporting blood pressure regulation." },
                     { name: "Digestive disorders", url: "en/digestive-disorders.html", img: "akupunktur-verdauungsleiden-zuerich.webp", desc: "Help for bloating, nausea and IBS." }
                 ]},
                 { name: "Gynaecological conditions", id: "gyn", items: [
+                    { name: "Menstrual discomfort", url: "en/menstrual-discomfort.html", img: "akupunktur-menstruationsbeschwerden-zuerich.webp", desc: "Relief for cycle-related pain and irregularities." },
+                    { name: "Pregnancy", url: "en/pregnancy.html", img: "akupunktur-schwangerschaftsbeschwerden-zuerich.webp", desc: "Support and preparation for childbirth." },
                     { name: "Infertility", url: "en/infertility.html", img: "akupunktur-unfruchtbarkeit-zuerich.webp", desc: "Natural support for fertility journeys." },
-                    { name: "Menstrual discomfort", url: "en/menstrual-discomfort.html", img: "akupunktur-menstruationsbeschwerden-zuerich.webp", desc: "Relief for cycle-related pain." },
-                    { name: "Menopausal symptoms", url: "en/menopausal-symptoms.html", img: "akupunktur-wechseljahresbeschwerden-zuerich.webp", desc: "Easing hot flashes and hormonal shifts." }
+                    { name: "Menopause", url: "en/menopause.html", img: "akupunktur-wechseljahresbeschwerden-zuerich.webp", desc: "Easing hot flashes and hormonal shifts." }
                 ]},
                 { name: "Mental health", id: "psy", items: [
                     { name: "Depression", url: "en/depression.html", img: "akupunktur-depression-zuerich.webp", desc: "Emotional balancing and mood support." },
                     { name: "Sleep disorders", url: "en/sleep-disorders.html", img: "akupunktur-schlafstoerung-zuerich.webp", desc: "Improving sleep quality with acupuncture." },
-                    { name: "Burnout", url: "en/burnout.html", img: "akupunktur-burnout-zuerich.webp", desc: "Recovery from deep exhaustion." }
+                    { name: "Burnout syndrome", url: "en/burnout.html", img: "akupunktur-burnout-zuerich.webp", desc: "Recovery from deep exhaustion." }
                 ]},
                 { name: "Allergy & Skin", id: "haut", items: [
                     { name: "Hay fever", url: "en/hay-fever.html", img: "akupunktur-heuschnupfen-zuerich.webp", desc: "Symptom relief for pollen allergies." },
-                    { name: "Eczema / Acne", url: "en/eczema.html", img: "akupunktur-ekzem-zuerich.webp", desc: "Holistic skin healing and balancing." }
+                    { name: "Neurodermatitis / Eczema", url: "en/eczema.html", img: "akupunktur-ekzem-zuerich.webp", desc: "Skin soothing and barrier strengthening." },
+                    { name: "Acne / Psoriasis", url: "en/acne.html", img: "akupunktur-akne-zuerich.webp", desc: "Holistic treatment for skin problems." }
                 ]},
                 { name: "Other", id: "sonst", items: [
                     { name: "Smoking cessation", url: "en/smoking-cessation.html", img: "akupunktur-nikotinentwöhnung-zuerich.webp", desc: "Supportive care for quitting smoking." },
-                    { name: "Overweight", url: "en/overweight.html", img: "akupunktur-uebergewicht-zuerich.webp", desc: "Metabolism activation for weight loss." }
+                    { name: "Overweight", url: "en/overweight.html", img: "akupunktur-uebergewicht-zuerich.webp", desc: "Metabolism activation for weight loss." },
+                    { name: "Immune system", url: "en/immune-system.html", img: "akupunktur-immunsystem-zuerich.webp", desc: "General strengthening of body defenses." }
                 ]}
             ]
         }
