--- a/public/de/migraene.html
+++ b/public/de/migraene.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 
-    <a href="../index.html" class="back-link">← Zurück zum Blog-Überblick</a>
+    <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
 
     <img src="../img/akupunktur-migraene-zuerich.webp" alt="TCM Migräne Behandlung Zürich" class="hero-img">
 
