--- a/public/de/kopfschmerzen.html
+++ b/public/de/kopfschmerzen.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Zurück zum Blog-Überblick</a>
+    <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
     <img src="../img/akupunktur-kopfschmerzen-zuerich.webp" alt="TCM Kopfschmerzen Behandlung Zürich" class="hero-img">
 
     <h1>Kopfschmerzen ganzheitlich lindern – Hilfe durch TCM</h1>
