--- a/public/de/schwindel.html
+++ b/public/de/schwindel.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Zurück zum Blog-Überblick</a>
+    <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
     <img src="../img/akupunktur-schwindel-zuerich.webp" alt="TCM Schwindel Behandlung Zürich" class="hero-img">
 
     <h1>Schwindel natürlich behandeln – Wege zum Gleichgewicht</h1>
