--- a/public/de/tinnitus.html
+++ b/public/de/tinnitus.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Zurück zum Blog-Überblick</a>
+    <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
     <img src="../img/akupunktur-tinnitus-zuerich.webp" alt="TCM Tinnitus Behandlung Zürich" class="hero-img">
 
     <h1>Tinnitus natürlich behandeln – Wege zur Ruhe</h1>
