--- a/public/de/trigeminusneuralgie.html
+++ b/public/de/trigeminusneuralgie.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Zurück zum Blog-Überblick</a>
+    <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
     <img src="../img/akupunktur-trigeminusneuralgie-zuerich.webp" alt="TCM Trigeminusneuralgie Behandlung Zürich" class="hero-img">
 
     <h1>Trigeminusneuralgie natürlich behandeln – Hilfe bei Gesichtsschmerzen</h1>
